// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createFlash > Existing planning > Snapshots > should match flash snapshot 1`] = `
{
  "document": {
    "content": [
      {
        "content": [],
        "contenttype": "",
        "data": {
          "text": "Test flash",
        },
        "id": "uuid-38",
        "links": [],
        "meta": [],
        "name": "",
        "rel": "",
        "role": "heading-1",
        "sensitivity": "",
        "title": "",
        "type": "core/text",
        "uri": "",
        "url": "",
        "uuid": "",
        "value": "",
      },
      {
        "content": [],
        "contenttype": "",
        "data": {
          "text": "",
        },
        "id": "uuid-39",
        "links": [],
        "meta": [],
        "name": "",
        "rel": "",
        "role": "",
        "sensitivity": "",
        "title": "",
        "type": "core/text",
        "uri": "",
        "url": "",
        "uuid": "",
        "value": "",
      },
    ],
    "language": "sv-se",
    "links": [
      {
        "content": [],
        "contenttype": "",
        "data": {},
        "id": "",
        "links": [],
        "meta": [],
        "name": "",
        "rel": "",
        "role": "",
        "sensitivity": "",
        "title": "Inrikes",
        "type": "core/section",
        "uri": "",
        "url": "",
        "uuid": "",
        "value": "",
      },
    ],
    "meta": [],
    "title": "Test flash",
    "type": "core/flash",
    "uri": "core://flash/uuid-37",
    "url": "",
    "uuid": "uuid-37",
  },
  "isMetaDocument": false,
  "mainDocument": "",
  "version": 0n,
}
`;

exports[`createFlash > Existing planning > Snapshots > should match planning snapshot 1`] = `
{
  "document": {
    "content": [],
    "language": "sv-se",
    "links": [
      {
        "content": [],
        "contenttype": "",
        "data": {},
        "id": "",
        "links": [],
        "meta": [],
        "name": "",
        "rel": "",
        "role": "",
        "sensitivity": "",
        "title": "Inrikes",
        "type": "core/section",
        "uri": "",
        "url": "",
        "uuid": "",
        "value": "",
      },
    ],
    "meta": [
      {
        "content": [],
        "contenttype": "",
        "data": {
          "end_date": "2025-02-17",
          "public": "true",
          "start_date": "2025-02-17",
          "tentative": "false",
        },
        "id": "",
        "links": [],
        "meta": [],
        "name": "",
        "rel": "",
        "role": "",
        "sensitivity": "",
        "title": "",
        "type": "core/planning-item",
        "uri": "",
        "url": "",
        "uuid": "",
        "value": "",
      },
      {
        "content": [],
        "contenttype": "",
        "data": {},
        "id": "",
        "links": [],
        "meta": [],
        "name": "",
        "rel": "",
        "role": "",
        "sensitivity": "",
        "title": "",
        "type": "core/newsvalue",
        "uri": "",
        "url": "",
        "uuid": "",
        "value": "4",
      },
      {
        "content": [],
        "contenttype": "",
        "data": {
          "end_date": "2025-02-17",
          "full_day": "false",
          "public": "true",
          "start": "2025-02-17T00:00:00.000Z",
          "start_date": "2025-02-17",
        },
        "id": "uuid-42",
        "links": [
          {
            "content": [],
            "contenttype": "",
            "data": {},
            "id": "",
            "links": [],
            "meta": [],
            "name": "",
            "rel": "deliverable",
            "role": "",
            "sensitivity": "",
            "title": "",
            "type": "core/flash",
            "uri": "",
            "url": "",
            "uuid": "uuid-37",
            "value": "",
          },
        ],
        "meta": [
          {
            "content": [],
            "contenttype": "",
            "data": {},
            "id": "",
            "links": [],
            "meta": [],
            "name": "",
            "rel": "",
            "role": "",
            "sensitivity": "",
            "title": "",
            "type": "core/assignment-type",
            "uri": "",
            "url": "",
            "uuid": "",
            "value": "flash",
          },
        ],
        "name": "",
        "rel": "",
        "role": "",
        "sensitivity": "",
        "title": "Test flash",
        "type": "core/assignment",
        "uri": "",
        "url": "",
        "uuid": "",
        "value": "",
      },
    ],
    "title": "Test planning",
    "type": "core/planning-item",
    "uri": "core://newscoverage/uuid-26",
    "url": "",
    "uuid": "uuid-26",
  },
  "isMetaDocument": false,
  "mainDocument": "",
  "version": 0n,
}
`;

exports[`createFlash > New planning > Snapshots > should match flash snapshot 1`] = `
{
  "document": {
    "content": [
      {
        "content": [],
        "contenttype": "",
        "data": {
          "text": "Test flash",
        },
        "id": "uuid-12",
        "links": [],
        "meta": [],
        "name": "",
        "rel": "",
        "role": "heading-1",
        "sensitivity": "",
        "title": "",
        "type": "core/text",
        "uri": "",
        "url": "",
        "uuid": "",
        "value": "",
      },
      {
        "content": [],
        "contenttype": "",
        "data": {
          "text": "",
        },
        "id": "uuid-13",
        "links": [],
        "meta": [],
        "name": "",
        "rel": "",
        "role": "",
        "sensitivity": "",
        "title": "",
        "type": "core/text",
        "uri": "",
        "url": "",
        "uuid": "",
        "value": "",
      },
    ],
    "language": "sv-se",
    "links": [
      {
        "content": [],
        "contenttype": "",
        "data": {},
        "id": "",
        "links": [],
        "meta": [],
        "name": "",
        "rel": "section",
        "role": "",
        "sensitivity": "",
        "title": "Inrikes",
        "type": "core/section",
        "uri": "",
        "url": "",
        "uuid": "956636ed-2687-4bc3-a45a-7e09d98c6eeb",
        "value": "",
      },
    ],
    "meta": [],
    "title": "Test flash",
    "type": "core/flash",
    "uri": "core://flash/uuid-11",
    "url": "",
    "uuid": "uuid-11",
  },
  "isMetaDocument": false,
  "mainDocument": "",
  "version": 0n,
}
`;

exports[`createFlash > New planning > Snapshots > should match planning snapshot 1`] = `
{
  "document": {
    "content": [],
    "language": "sv-se",
    "links": [
      {
        "content": [],
        "contenttype": "",
        "data": {},
        "id": "",
        "links": [],
        "meta": [],
        "name": "",
        "rel": "section",
        "role": "",
        "sensitivity": "",
        "title": "Inrikes",
        "type": "core/section",
        "uri": "",
        "url": "",
        "uuid": "956636ed-2687-4bc3-a45a-7e09d98c6eeb",
        "value": "",
      },
    ],
    "meta": [
      {
        "content": [],
        "contenttype": "",
        "data": {
          "end_date": "2025-02-17",
          "public": "true",
          "start_date": "2025-02-17",
          "tentative": "false",
        },
        "id": "",
        "links": [],
        "meta": [],
        "name": "",
        "rel": "",
        "role": "",
        "sensitivity": "",
        "title": "",
        "type": "core/planning-item",
        "uri": "",
        "url": "",
        "uuid": "",
        "value": "",
      },
      {
        "content": [],
        "contenttype": "",
        "data": {},
        "id": "",
        "links": [],
        "meta": [],
        "name": "",
        "rel": "",
        "role": "",
        "sensitivity": "",
        "title": "",
        "type": "core/newsvalue",
        "uri": "",
        "url": "",
        "uuid": "",
        "value": "4",
      },
      {
        "content": [],
        "contenttype": "",
        "data": {
          "end_date": "2025-02-17",
          "full_day": "false",
          "public": "true",
          "start": "2025-02-17T00:00:00.000Z",
          "start_date": "2025-02-17",
        },
        "id": "uuid-16",
        "links": [
          {
            "content": [],
            "contenttype": "",
            "data": {},
            "id": "",
            "links": [],
            "meta": [],
            "name": "",
            "rel": "deliverable",
            "role": "",
            "sensitivity": "",
            "title": "",
            "type": "core/flash",
            "uri": "",
            "url": "",
            "uuid": "uuid-11",
            "value": "",
          },
        ],
        "meta": [
          {
            "content": [],
            "contenttype": "",
            "data": {},
            "id": "",
            "links": [],
            "meta": [],
            "name": "",
            "rel": "",
            "role": "",
            "sensitivity": "",
            "title": "",
            "type": "core/assignment-type",
            "uri": "",
            "url": "",
            "uuid": "",
            "value": "flash",
          },
        ],
        "name": "",
        "rel": "",
        "role": "",
        "sensitivity": "",
        "title": "Test flash",
        "type": "core/assignment",
        "uri": "",
        "url": "",
        "uuid": "",
        "value": "",
      },
    ],
    "title": "Test flash",
    "type": "core/planning-item",
    "uri": "core://newscoverage/uuid-1",
    "url": "",
    "uuid": "uuid-1",
  },
  "isMetaDocument": false,
  "mainDocument": "",
  "version": 0n,
}
`;
